--- a/index.html
+++ b/index.html
@@ -4,53 +4,163 @@
   <meta charset="UTF-8">
   <title>Citizen AI</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    .container { width: 400px; margin: 50px auto; }
-    .chatbox { border: 1px solid #ccc; height: 300px; overflow-y: auto; padding: 10px; }
-    .input-area { display: flex; margin-top: 10px; }
-    .input-area input { flex: 1; padding: 8px; }
-    .input-area button { padding: 8px; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f7fa;
+    }
+    header {
+      background: #0078d7;
+      color: white;
+      padding: 15px;
+      text-align: center;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      background: #005a9e;
+    }
+    nav button {
+      background: none;
+      border: none;
+      color: white;
+      padding: 14px 20px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    nav button:hover {
+      background: #004578;
+    }
+    .container {
+      max-width: 600px;
+      margin: 20px auto;
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    button.primary {
+      background: #0078d7;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button.primary:hover {
+      background: #005a9e;
+    }
+    .chatbox {
+      border: 1px solid #ccc;
+      height: 250px;
+      overflow-y: auto;
+      padding: 10px;
+      margin-bottom: 10px;
+      background: #f9f9f9;
+    }
+    .hidden { display: none; }
   </style>
 </head>
 <body>
+  <header>
+    <h1>Citizen AI Portal</h1>
+  </header>
+
+  <nav>
+    <button onclick="showTab('home')">Home</button>
+    <button onclick="showTab('login')">Login</button>
+    <button onclick="showTab('signup')">Signup</button>
+    <button onclick="showTab('profile')">Profile</button>
+    <button onclick="showTab('feedback')">Feedback</button>
+  </nav>
+
   <div class="container">
-    <h2>Citizen AI</h2>
-    
-    <!-- Login/Signup -->
-    <div id="login-section">
-      <input type="text" id="name" placeholder="Name"><br>
-      <input type="email" id="email" placeholder="Email"><br>
-      <input type="password" id="password" placeholder="Password"><br>
-      <button onclick="login()">Login</button>
-      <button onclick="signup()">Signup</button>
+    <!-- Home -->
+    <div id="home" class="tab">
+      <h2>Welcome to Citizen AI</h2>
+      <p>Ask questions, access services, and give feedback to improve your community.</p>
+      <div class="chatbox" id="chatbox"></div>
+      <input type="text" id="userInput" placeholder="Ask Citizen AI...">
+      <button class="primary" onclick="sendMessage()">Send</button>
     </div>
 
-    <!-- Chatbot -->
-    <div id="chat-section" style="display:none;">
-      <div class="chatbox" id="chatbox"></div>
-      <div class="input-area">
-        <input type="text" id="userInput" placeholder="Ask Citizen AI...">
-        <button onclick="sendMessage()">Send</button>
-      </div>
+    <!-- Login -->
+    <div id="login" class="tab hidden">
+      <h2>Login</h2>
+      <input type="email" id="loginEmail" placeholder="Email">
+      <input type="password" id="loginPassword" placeholder="Password">
+      <button class="primary" onclick="login()">Login</button>
+    </div>
+
+    <!-- Signup -->
+    <div id="signup" class="tab hidden">
+      <h2>Signup</h2>
+      <input type="text" id="signupName" placeholder="Full Name">
+      <input type="email" id="signupEmail" placeholder="Email">
+      <input type="password" id="signupPassword" placeholder="Password">
+      <button class="primary" onclick="signup()">Signup</button>
+    </div>
+
+    <!-- Profile -->
+    <div id="profile" class="tab hidden">
+      <h2>User Profile</h2>
+      <p><b>Name:</b> <span id="profileName">Guest</span></p>
+      <p><b>Email:</b> <span id="profileEmail">Not logged in</span></p>
+    </div>
+
+    <!-- Feedback -->
+    <div id="feedback" class="tab hidden">
+      <h2>Feedback</h2>
+      <textarea id="feedbackText" placeholder="Share your feedback..."></textarea>
+      <button class="primary" onclick="submitFeedback()">Submit</button>
+      <p id="feedbackMsg"></p>
     </div>
   </div>
 
   <script>
-    function login() {
-      // For now, just switch to chat
-      document.getElementById('login-section').style.display = 'none';
-      document.getElementById('chat-section').style.display = 'block';
+    function showTab(tabId) {
+      document.querySelectorAll('.tab').forEach(tab => tab.classList.add('hidden'));
+      document.getElementById(tabId).classList.remove('hidden');
     }
-    function signup() {
-      login(); // same for prototype
-    }
+
     function sendMessage() {
       let input = document.getElementById('userInput').value;
       let chatbox = document.getElementById('chatbox');
       chatbox.innerHTML += "<p><b>You:</b> " + input + "</p>";
-      // Placeholder AI response
       chatbox.innerHTML += "<p><b>Citizen AI:</b> This is a sample response.</p>";
       document.getElementById('userInput').value = "";
+    }
+
+    function login() {
+      let email = document.getElementById('loginEmail').value;
+      let password = document.getElementById('loginPassword').value;
+      document.getElementById('profileEmail').innerText = email;
+      document.getElementById('profileName').innerText = "Citizen User";
+      alert("Login successful!");
+      showTab('home');
+    }
+
+    function signup() {
+      let name = document.getElementById('signupName').value;
+      let email = document.getElementById('signupEmail').value;
+      document.getElementById('profileName').innerText = name;
+      document.getElementById('profileEmail').innerText = email;
+      alert("Signup successful!");
+      showTab('home');
+    }
+
+    function submitFeedback() {
+      let feedback = document.getElementById('feedbackText').value;
+      document.getElementById('feedbackMsg').innerText = "Thank you for your feedback!";
+      document.getElementById('feedbackText').value = "";
     }
   </script>
 </body>
